[package]
name = "compile-rf"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false

[features]
default = []
detailed-stats = []
non-parallel = []

[dependencies]
csv = "1.3.1"
mimalloc = { version = "0.1.46", default-features = false }
rayon = "1.10.0"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.172"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "minwinbase"] }
