[project]
name = "compile-rf"
version = "0.1.0"
description = "Python scripts for Partitioning-based approach for compiling RFs into DTs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]
